--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "react-stylish-gallery",
-  "version": "0.0.1",
-  "description": "Easy to use React components for creating beautiful gallery",
-  "main": "dist/index.js",
+  "version": "1.0.0",
+  "description": "Easy to use React components for creating beautiful responsive image galleries",
+  "main": "./dist/index.bundle.js",
   "author": "Nichita-Alexandru Sindie",
   "license": "MIT",
+  "keywords": [
+    "react",
+    "stylish",
+    "gallery",
+    "components",
+    "image",
+    "modal"
+  ],
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
@@ -29,6 +37,7 @@
     "flow-bin": "^0.54.0",
     "html-webpack-plugin": "^2.30.1",
     "react-hot-loader": "next",
+    "serve": "^6.0.6",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.5.5",
