--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "react-stylish-gallery",
-  "version": "1.0.0",
-  "description": "Easy to use React components for creating beautiful responsive image galleries",
+  "version": "1.0.1",
+  "description": "Create responsive image galleries with easy to use React components",
   "main": "./dist/index.bundle.js",
-  "author": "Nichita-Alexandru Sindie",
+  "author": {
+    "name": "Nichita-Alexandru Sindie",
+    "email": "nichita.sindie@yahoo.com"
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/nickyzz/react-stylish-gallery.git"
+  },
   "license": "MIT",
   "keywords": [
     "react",
     "stylish",
     "gallery",
-    "components",
+    "galleries",
+    "responsive",
     "image",
     "modal"
   ],
