--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,13 @@
 {
-  "env": {
-    "browser": true,
-    "jest": true
-  },
   "extends": [
     "airbnb",
     "plugin:flowtype/recommended"
   ],
   "plugins": [
-    "flowtype",
+    "flowtype"
   ],
   "rules": {
     "semi": [2, "never"],
-    "no-unexpected-multiline": 2,
-    "compat/compat": 2
+    "no-unexpected-multiline": 2
   }
+}
