--- a/.flowconfig
+++ b/.flowconfig
@@ -2,3 +2,5 @@
 suppress_comment= \\(.\\|\n\\)*\\flow-disable-next-line
 [ignore]
 .*/node_modules/eslint-plugin-jsx-a11y/*
+.*/node_modules/jss/*
+.*/gh-pages/*
