--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-stylish-gallery",
-  "version": "1.0.1",
+  "version": "1.0.6",
   "description": "Create responsive image galleries with easy to use React components",
   "main": "./dist/index.bundle.js",
   "author": {
     "name": "Nichita-Alexandru Sindie",
     "email": "nichita.sindie@yahoo.com"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/nickyzz/react-stylish-gallery.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nickyzz/react-stylish-gallery.git"
   },
   "license": "MIT",
   "keywords": [
@@ -27,22 +27,24 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.7",
     "csv-loader": "^2.1.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint": "^3.19.0 || ^4.3.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-flowtype": "^2.35.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "file-loader": "^0.11.2",
-    "flow-bin": "^0.54.0",
+    "flow-bin": "^0.54.1",
     "html-webpack-plugin": "^2.30.1",
     "react-hot-loader": "next",
     "serve": "^6.0.6",
