--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^0.11.2",
     "flow-bin": "^0.54.1",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "react-hot-loader": "next",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
